src/main/java/com/example/voting_system/error/NotFoundException.java
package com.example.voting_system.error;

public class NotFoundException extends AppException {
    public NotFoundException(String message) {
        super(message);
    }
}
